--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
-# project.md
-# v1spec.md
+# Dependencies
+node_modules/
+
+# Turborepo
+.turbo/
+
+# Build outputs and caches
+dist/
+coverage/
+*.tsbuildinfo
+
+# Expo / React Native
+.expo/
+.expo-shared/
+*.expo.*
+.tmp-expo/
+web-build/
+
+# Environment files
+.env
+.env.*
+!.env.example
+!.env*.example
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# project files
+project.md
+v1spec.md
