feat(bridge): add QR code pairing support with terminal output
feat(mobile): implement QR scanning and manual pairing fallback

docs: update pairing UX and connection strategy documentation

test: add pairing QR and connection tests

build: add expo-camera and expo-secure-store dependencies

--- a/apps/bridge/package.json
+++ b/apps/bridge/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@codex-mobile/protocol": "workspace:*",
+    "qrcode-terminal": "^0.12.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/qrcode-terminal": "^0.12.2",
     "@types/ws": "^8.5.14"
   }
 }
