--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@codex-mobile/protocol": "workspace:*",
+    "expo-camera": "~17.0.8",
+    "expo-secure-store": "~15.0.7",
     "expo": "~54.0.33",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
