feat(bridge): add auto-open ChatGPT auth URL with browser launch status
- Add --no-open-auth-url flag to disable auto-open
- Implement browser launch status feedback to mobile
- Add auth URL extraction and cross-platform URL opener
- Update bridge protocol with authBrowserLaunch message type
- Add comprehensive tests for new auth functionality

BREAKING CHANGE: Bridge now automatically opens ChatGPT auth URLs unless --no-open-auth-url flag is used

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,7 @@
       "dependsOn": ["^lint"]
     },
     "typecheck": {
-      "dependsOn": ["^typecheck"]
+      "dependsOn": ["^build", "^typecheck"]
     },
     "test": {
       "dependsOn": ["^build"]
