--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -26,9 +26,10 @@
     "moti": "^0.30.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
-    "react-native-reanimated": "^4.2.1",
-    "react-native-svg": "^15.15.2"
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0"
